# agentic-product-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/agentlab/: __init__.py  agent.py  cli.py  config.py  llm.py  tools.py
tests/: test_agent.py  test_tools.py
